Moved remote inside container

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <div class="remote-container rounded-corners">
+        <div class="remote-container">
+            <div class="remote rounded-corners">
 
+            </div>
         </div>
     </body>
 </html>
