Websocket + power button implemented

--- a/index.html
+++ b/index.html
@@ -2,13 +2,27 @@
 <html>
     <head>
         <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="components.css">
+        <link rel="stylesheet" href="spinner.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
+        <div id="loading_screen" class="loading-container">
+            <div class="lds-default"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+            <p>Establishing connection</p>
+        </div>
         <div class="remote-container">
             <div class="remote rounded-corners">
 
+                <div class="button-row">
+                    <div id="power_button" class="toggle">
+                        <div class="circle"></div>
+                    </div>
+                </div>
+                
+
             </div>
         </div>
+        <script src="remote.js"></script>
     </body>
 </html>
