Implemented time out message

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <div id="loading_screen" class="loading-container">
+        <div id="loading_screen" class="screen-container">
             <div class="lds-default"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
             <p>Establishing connection</p>
+        </div>
+        <div id="timeout_screen" class="screen-container hidden">
+            <p>Connection timed out</p>
         </div>
         <div class="remote-container">
             <div class="remote rounded-corners">
