Added touch start/end events

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             <rect transform="rotate(-90)" x="-6" y="0" width="2" height="10" fill="currentColor"/>
                         </svg>
                     </div>
-                    <div id="volume_show" class="volume"><p>---.-dB</p></div>
+                    <div id="volume_show" class="volume"><p>---</p></div>
                     <div id="volume_up" class="button volume-button">
                         <svg version="1.1" viewBox="0 0 10 10" xmlns="http://www.w3.org/2000/svg"><g fill="currentColor"><rect x="4" y="0" width="2" height="10"/><rect transform="rotate(-90)" x="-6" y="0" width="2" height="10"/></g></svg>
                     </div>
