--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <link rel="stylesheet" href="components.css">
         <link rel="stylesheet" href="spinner.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <title>Pioneer Remote</title>
+        <link rel="icon" type="image/png" href="favicon.png"/>
     </head>
     <body>
         <div id="loading_screen" class="screen-container">
